# simple-currency-converter-bot-demo

./: .dockerignore  .gitignore  Dockerfile  amvera.yml  app.py  pyproject.toml
business_layer/: converter.py  currency_updater.py  ptb_scheduler.py  scheduler.py
models/: converted_query.py  currency.py  currency_rate.py
presentation_layer/: console.py  presentation.py  telegram_ui.py
utilities/: custom_jobstore.py  ptbjobstate_adapter.py
